--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
             <img src="/image/DSC09280.JPG" alt="" class="profile profile_img2">
             <ul class="list list_data2">
                 <li>Coding lab</li>
+                <li>Coding lab</li>
+
                 <li>FullStack Developer</li>
                 <li>UI/UX designer</li>
             </ul>
